syntax = "proto3";

option csharp_namespace = "AuthenticationGrpc";


service Login{
  rpc loginUser (LoginRequest) returns (LoginReply);
}


message LoginRequest{
  string username = 1;
  string password = 2;
}


message LoginReply{
  string message = 1;
}